--- a/Project.ipynb
+++ b/Project.ipynb
@@ -79,6 +79,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "144c38fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99631740",
+   "metadata": {},
+   "source": [
+    "<h1>Feature transformations</h1>\n",
+    "<h4>In this section we will transform the NaN or null features and try different values to achieve a better result</h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "57a0b022",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.93370216207748\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0        1.613591\n",
+       "1        4.074574\n",
+       "2        9.409158\n",
+       "3       14.738506\n",
+       "4       20.064968\n",
+       "          ...    \n",
+       "3644    42.561730\n",
+       "3645    44.178635\n",
+       "3646    45.572647\n",
+       "3647    46.781475\n",
+       "3648    52.747670\n",
+       "Name: Access to electricity (% of population), Length: 3649, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get mean values for whole table ignoring NaN values\n",
+    "\n",
+    "\n",
+    "access = df[\"Access to electricity (% of population)\"]\n",
+    "print(np.nanmean(access))\n",
+    "access\n",
+    "\n",
+    " Renewable-electricity-generating-capacity-per-capita"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3dabd2e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "renewPerCapita nanmean =  113.13749816041205\n",
+      "renewPerCapita mean =  113.13749816041205\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0        9.22\n",
+       "1        8.86\n",
+       "2        8.47\n",
+       "3        8.09\n",
+       "4        7.75\n",
+       "        ...  \n",
+       "3644    62.88\n",
+       "3645    62.33\n",
+       "3646    82.53\n",
+       "3647    81.40\n",
+       "3648    80.61\n",
+       "Name: Renewable-electricity-generating-capacity-per-capita, Length: 3649, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get mean values for whole table ignoring NaN values\n",
+    "\n",
+    "\n",
+    "renewPerCapita = df[\"Renewable-electricity-generating-capacity-per-capita\"]\n",
+    "print(\"renewPerCapita nanmean = \",np.nanmean(renewPerCapita))\n",
+    "print(\"renewPerCapita mean = \",np.mean(renewPerCapita))\n",
+    "renewPerCapita\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ac13166b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year                                                                2.010038e+03\n",
+      "Access to electricity (% of population)                             7.893370e+01\n",
+      "Access to clean fuels for cooking                                   6.325529e+01\n",
+      "Renewable-electricity-generating-capacity-per-capita                1.131375e+02\n",
+      "Financial flows to developing countries (US $)                      9.422400e+07\n",
+      "Renewable energy share in the total final energy consumption (%)    3.263816e+01\n",
+      "Electricity from fossil fuels (TWh)                                 7.036500e+01\n",
+      "Electricity from nuclear (TWh)                                      1.345019e+01\n",
+      "Electricity from renewables (TWh)                                   2.396801e+01\n",
+      "Low-carbon electricity (% electricity)                              3.680118e+01\n",
+      "Primary energy consumption per capita (kWh/person)                  2.574398e+04\n",
+      "Energy intensity level of primary energy (MJ/$2017 PPP GDP)         5.307345e+00\n",
+      "Value_co2_emissions_kt_by_country                                   1.598665e+05\n",
+      "Renewables (% equivalent primary energy)                            1.198671e+01\n",
+      "gdp_growth                                                          3.441610e+00\n",
+      "gdp_per_capita                                                      1.328377e+04\n",
+      "Land Area(Km2)                                                      6.332135e+05\n",
+      "Latitude                                                            1.824639e+01\n",
+      "Longitude                                                           1.482269e+01\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = df.mean(axis=0,numeric_only=True,skipna=True)\n",
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de9f6746",
+   "metadata": {},
+   "source": [
+    "<h1>Messing with DF tables of country</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "56871372",
    "metadata": {},
