--- a/Project.ipynb
+++ b/Project.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "57a0b022",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "78.93370216207748\n"
+      "78.93370216207748\n",
+      "access nanmean =  78.93370216207748\n",
+      "access mean =  78.93370216207748\n"
      ]
     },
     {
@@ -126,7 +128,7 @@
        "Name: Access to electricity (% of population), Length: 3649, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,9 +139,9 @@
     "\n",
     "access = df[\"Access to electricity (% of population)\"]\n",
     "print(np.nanmean(access))\n",
-    "access\n",
-    "\n",
-    " Renewable-electricity-generating-capacity-per-capita"
+    "print(\"access nanmean = \",np.nanmean(access))\n",
+    "print(\"access mean = \",np.mean(access))\n",
+    "access"
    ]
   },
   {
@@ -192,40 +194,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "ac13166b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year                                                                    2,010.038\n",
+       "Access to electricity (% of population)                                    78.934\n",
+       "Access to clean fuels for cooking                                          63.255\n",
+       "Renewable-electricity-generating-capacity-per-capita                      113.137\n",
+       "Financial flows to developing countries (US $)                     94,224,000.000\n",
+       "Renewable energy share in the total final energy consumption (%)           32.638\n",
+       "Electricity from fossil fuels (TWh)                                        70.365\n",
+       "Electricity from nuclear (TWh)                                             13.450\n",
+       "Electricity from renewables (TWh)                                          23.968\n",
+       "Low-carbon electricity (% electricity)                                     36.801\n",
+       "Primary energy consumption per capita (kWh/person)                     25,743.982\n",
+       "Energy intensity level of primary energy (MJ/$2017 PPP GDP)                 5.307\n",
+       "Value_co2_emissions_kt_by_country                                     159,866.463\n",
+       "Renewables (% equivalent primary energy)                                   11.987\n",
+       "gdp_growth                                                                  3.442\n",
+       "gdp_per_capita                                                         13,283.774\n",
+       "Land Area(Km2)                                                        633,213.489\n",
+       "Latitude                                                                   18.246\n",
+       "Longitude                                                                  14.823\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.float_format = '{:,.3f}'.format\n",
+    "\n",
+    "val = df.mean(axis=0,numeric_only=True,skipna=True)\n",
+    "val\n",
+    "\n",
+    "#these are the avg values for each column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e297211a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Year                                                                2.010038e+03\n",
-      "Access to electricity (% of population)                             7.893370e+01\n",
-      "Access to clean fuels for cooking                                   6.325529e+01\n",
-      "Renewable-electricity-generating-capacity-per-capita                1.131375e+02\n",
-      "Financial flows to developing countries (US $)                      9.422400e+07\n",
-      "Renewable energy share in the total final energy consumption (%)    3.263816e+01\n",
-      "Electricity from fossil fuels (TWh)                                 7.036500e+01\n",
-      "Electricity from nuclear (TWh)                                      1.345019e+01\n",
-      "Electricity from renewables (TWh)                                   2.396801e+01\n",
-      "Low-carbon electricity (% electricity)                              3.680118e+01\n",
-      "Primary energy consumption per capita (kWh/person)                  2.574398e+04\n",
-      "Energy intensity level of primary energy (MJ/$2017 PPP GDP)         5.307345e+00\n",
-      "Value_co2_emissions_kt_by_country                                   1.598665e+05\n",
-      "Renewables (% equivalent primary energy)                            1.198671e+01\n",
-      "gdp_growth                                                          3.441610e+00\n",
-      "gdp_per_capita                                                      1.328377e+04\n",
-      "Land Area(Km2)                                                      6.332135e+05\n",
-      "Latitude                                                            1.824639e+01\n",
-      "Longitude                                                           1.482269e+01\n",
-      "dtype: float64\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3649 entries, 0 to 3648\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                                                            Non-Null Count  Dtype  \n",
+      "---  ------                                                            --------------  -----  \n",
+      " 0   Entity                                                            3649 non-null   object \n",
+      " 1   Year                                                              3649 non-null   int64  \n",
+      " 2   Access to electricity (% of population)                           3649 non-null   float64\n",
+      " 3   Access to clean fuels for cooking                                 3649 non-null   float64\n",
+      " 4   Renewable-electricity-generating-capacity-per-capita              3649 non-null   float64\n",
+      " 5   Financial flows to developing countries (US $)                    3649 non-null   float64\n",
+      " 6   Renewable energy share in the total final energy consumption (%)  3649 non-null   float64\n",
+      " 7   Electricity from fossil fuels (TWh)                               3649 non-null   float64\n",
+      " 8   Electricity from nuclear (TWh)                                    3649 non-null   float64\n",
+      " 9   Electricity from renewables (TWh)                                 3649 non-null   float64\n",
+      " 10  Low-carbon electricity (% electricity)                            3649 non-null   float64\n",
+      " 11  Primary energy consumption per capita (kWh/person)                3649 non-null   float64\n",
+      " 12  Energy intensity level of primary energy (MJ/$2017 PPP GDP)       3649 non-null   float64\n",
+      " 13  Value_co2_emissions_kt_by_country                                 3649 non-null   float64\n",
+      " 14  Renewables (% equivalent primary energy)                          3649 non-null   float64\n",
+      " 15  gdp_growth                                                        3649 non-null   float64\n",
+      " 16  gdp_per_capita                                                    3649 non-null   float64\n",
+      " 17  Density\\n(P/Km2)                                                  3648 non-null   object \n",
+      " 18  Land Area(Km2)                                                    3649 non-null   float64\n",
+      " 19  Latitude                                                          3649 non-null   float64\n",
+      " 20  Longitude                                                         3649 non-null   float64\n",
+      "dtypes: float64(18), int64(1), object(2)\n",
+      "memory usage: 598.8+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Surface\\AppData\\Local\\Temp\\ipykernel_631072\\2489947689.py:3: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  df_filled_with_averages = df.fillna(df.mean())\n"
      ]
     }
    ],
    "source": [
-    "val = df.mean(axis=0,numeric_only=True,skipna=True)\n",
-    "print(val)"
+    "#lets fill the nan values with average values for each column\n",
+    "\n",
+    "df_filled_with_averages = df.fillna(df.mean())\n",
+    "\n",
+    "print(df_filled_with_averages.info())"
    ]
   },
   {
