--- a/Project.ipynb
+++ b/Project.ipynb
@@ -78,16 +78,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "144c38fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#code here\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "99631740",
    "metadata": {},
@@ -293,6 +283,69 @@
     "df_filled_with_averages = df.fillna(df.mean())\n",
     "\n",
     "print(df_filled_with_averages.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a15707d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      44.990\n",
+      "1      45.600\n",
+      "2      37.830\n",
+      "3      36.660\n",
+      "4      44.240\n",
+      "        ...  \n",
+      "3644   81.900\n",
+      "3645   82.460\n",
+      "3646   80.230\n",
+      "3647   81.500\n",
+      "3648   81.900\n",
+      "Name: Renewable energy share in the total final energy consumption (%), Length: 3649, dtype: float64\n",
+      "0.1\n",
+      "0.2\n",
+      "0.30000000000000004\n",
+      "0.4\n",
+      "0.5\n",
+      "0.6\n",
+      "0.7000000000000001\n",
+      "0.8\n",
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for this, lets first try a few different train test splits\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#the value we want to predict is  Renewable energy share in the total final energy consumption (%)\n",
+    "Re_Percent = df_filled_with_averages[\"Renewable energy share in the total final energy consumption (%)\"]\n",
+    "\n",
+    "#print(Re_Percent)\n",
+    "\n",
+    "\n",
+    "for i in np.arange(0.1,1,0.1):\n",
+    "    \n",
+    "    print(i)\n",
+    "    \n",
+    "#X_train, X_test, y_train, y_test = train_test_split(images, labels, test_size=0.1, random_state=2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfc1868c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now lets try a basic logreg using these values"
    ]
   },
   {
