--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 308,
    "id": "885cc3eb",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 309,
    "id": "a2dab5a3",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 310,
    "id": "178dad28",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 311,
    "id": "57a0b022",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "Name: Access to electricity (% of population), Length: 3649, dtype: float64"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 312,
    "id": "3dabd2e7",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "Name: Renewable-electricity-generating-capacity-per-capita, Length: 3649, dtype: float64"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 313,
    "id": "ac13166b",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 314,
    "id": "e297211a",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 315,
    "id": "2bb73cb0",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 316,
    "id": "6a664df7",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "2012"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 317,
    "id": "08a3778a",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 318,
    "id": "a15707d0",
    "metadata": {},
    "outputs": [
@@ -429,8 +429,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "#for now lets ignore country since we are making a prediction based on\n",
     "\n",
     "columnsToDrop = ['Renewable energy share in the total final energy consumption (%)', 'Entity']\n",
@@ -441,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 319,
    "id": "b8c08f30",
    "metadata": {},
    "outputs": [
@@ -487,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 333,
    "id": "523cfa18",
    "metadata": {},
    "outputs": [
@@ -496,21 +494,24 @@
      "output_type": "stream",
      "text": [
       "DataFrame Used = df_drop_features\n",
-      "cutoff =  2010 , rmse =  18.626190384093157\n",
-      "cutoff =  2011 , rmse =  18.45503057147415\n",
-      "cutoff =  2012 , rmse =  18.21991646882916\n",
-      "cutoff =  2013 , rmse =  18.15443873426349\n",
-      "cutoff =  2014 , rmse =  18.044711896995924\n",
-      "cutoff =  2015 , rmse =  18.275532268409123\n",
-      "cutoff =  2016 , rmse =  18.683819453924354\n",
-      "cutoff =  2017 , rmse =  19.457082866368822\n"
+      "cutoff =  2010 , rmse =  2.1176434826997844e-10\n",
+      "cutoff =  2011 , rmse =  8.617216782748285e-11\n",
+      "cutoff =  2012 , rmse =  2.6347900088261203e-11\n",
+      "cutoff =  2013 , rmse =  1.0857974479799328e-11\n",
+      "cutoff =  2014 , rmse =  5.973093844929292e-11\n",
+      "cutoff =  2015 , rmse =  2.0957391525198142e-11\n",
+      "cutoff =  2016 , rmse =  8.459237647579147e-11\n",
+      "cutoff =  2017 , rmse =  3.712955301987315e-11\n"
      ]
     }
    ],
    "source": [
-    "df_drop_features = df_filled_with_averages.drop(columns=['Renewable-electricity-generating-capacity-per-capita', 'Renewables (% equivalent primary energy)', 'Renewable-electricity-generating-capacity-per-capita'])\n",
+    "#df_drop_features = df_filled_with_averages.drop(columns=['Renewables (% equivalent primary energy)', 'Financial flows to developing countries (US $)'])\n",
     "\n",
-    "GetRmseFromDF(df_drop_features, \"df_drop_features\", columnsToDrop, targetColumn)\n",
+    "columnsToDrop = ['Renewable energy share in the total final energy consumption (%)', 'Entity', ]\n",
+    "targetColumn = \"Renewable-electricity-generating-capacity-per-capita\"\n",
+    "\n",
+    "GetRmseFromDF(df_filled_with_averages, \"df_drop_features\", columnsToDrop, targetColumn)\n",
     "\n",
     "# wow, it got worse... \n",
     "# to be fair I should be trying to predict renewables in the first place the table with 59% nan values"
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 321,
    "id": "0917b163",
    "metadata": {},
    "outputs": [
@@ -527,14 +528,14 @@
      "output_type": "stream",
      "text": [
       "DataFrame Used = df_drop_features\n",
-      "cutoff =  2010 , rmse =  15.871704098296238\n",
-      "cutoff =  2011 , rmse =  15.851880859240211\n",
-      "cutoff =  2012 , rmse =  15.84983590932634\n",
-      "cutoff =  2013 , rmse =  15.96319942861053\n",
-      "cutoff =  2014 , rmse =  16.134603988179105\n",
-      "cutoff =  2015 , rmse =  16.506617005284298\n",
-      "cutoff =  2016 , rmse =  17.08114713325585\n",
-      "cutoff =  2017 , rmse =  18.06309972408675\n"
+      "cutoff =  2010 , rmse =  9.762016874432182e-13\n",
+      "cutoff =  2011 , rmse =  4.949959184082819e-13\n",
+      "cutoff =  2012 , rmse =  1.0048588192017607e-12\n",
+      "cutoff =  2013 , rmse =  7.278430114067115e-13\n",
+      "cutoff =  2014 , rmse =  8.742722572654149e-13\n",
+      "cutoff =  2015 , rmse =  5.255563850558326e-13\n",
+      "cutoff =  2016 , rmse =  9.742068480748199e-13\n",
+      "cutoff =  2017 , rmse =  2.402309154739503e-12\n"
      ]
     }
    ],
@@ -542,6 +543,8 @@
     "#now lets keep renewables\n",
     "\n",
     "df_drop_features_renew = df_filled_with_averages.drop(columns=['Renewable-electricity-generating-capacity-per-capita', 'Renewable-electricity-generating-capacity-per-capita'])\n",
+    "\n",
+    "targetColumn = \"Renewables (% equivalent primary energy)\"\n",
     "\n",
     "GetRmseFromDF(df_drop_features_renew, \"df_drop_features\", columnsToDrop, targetColumn)\n",
     "\n",
@@ -560,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 322,
    "id": "6d7ba7bf",
    "metadata": {},
    "outputs": [
@@ -599,11 +602,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 323,
    "id": "9eba78c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3649 entries, 0 to 3648\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                                                            Non-Null Count  Dtype  \n",
+      "---  ------                                                            --------------  -----  \n",
+      " 0   Entity                                                            3649 non-null   object \n",
+      " 1   Year                                                              3649 non-null   int64  \n",
+      " 2   Access to electricity (% of population)                           3649 non-null   float64\n",
+      " 3   Access to clean fuels for cooking                                 3649 non-null   float64\n",
+      " 4   Renewable-electricity-generating-capacity-per-capita              3649 non-null   float64\n",
+      " 5   Financial flows to developing countries (US $)                    3649 non-null   float64\n",
+      " 6   Renewable energy share in the total final energy consumption (%)  3649 non-null   float64\n",
+      " 7   Electricity from fossil fuels (TWh)                               3649 non-null   float64\n",
+      " 8   Electricity from nuclear (TWh)                                    3649 non-null   float64\n",
+      " 9   Electricity from renewables (TWh)                                 3649 non-null   float64\n",
+      " 10  Low-carbon electricity (% electricity)                            3649 non-null   float64\n",
+      " 11  Primary energy consumption per capita (kWh/person)                3649 non-null   float64\n",
+      " 12  Energy intensity level of primary energy (MJ/$2017 PPP GDP)       3649 non-null   float64\n",
+      " 13  Value_co2_emissions_kt_by_country                                 3649 non-null   float64\n",
+      " 14  Renewables (% equivalent primary energy)                          3649 non-null   float64\n",
+      " 15  gdp_growth                                                        3649 non-null   float64\n",
+      " 16  gdp_per_capita                                                    3649 non-null   float64\n",
+      " 17  Density/n(P/Km2)                                                  3649 non-null   float64\n",
+      " 18  Land Area(Km2)                                                    3649 non-null   float64\n",
+      " 19  Latitude                                                          3649 non-null   float64\n",
+      " 20  Longitude                                                         3649 non-null   float64\n",
+      "dtypes: float64(19), int64(1), object(1)\n",
+      "memory usage: 598.8+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_filled_with_zero = df.fillna(0)\n",
+    "\n",
+    "print(df_filled_with_averages.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "id": "57d4df79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame Used = df_drop_features\n",
+      "cutoff =  2010 , rmse =  12.742793049728094\n",
+      "cutoff =  2011 , rmse =  12.446311204874789\n",
+      "cutoff =  2012 , rmse =  12.015070656203186\n",
+      "cutoff =  2013 , rmse =  11.684714476352775\n",
+      "cutoff =  2014 , rmse =  11.13178501574941\n",
+      "cutoff =  2015 , rmse =  10.863960835926411\n",
+      "cutoff =  2016 , rmse =  10.584705771573079\n",
+      "cutoff =  2017 , rmse =  10.462916410288207\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_filled_with_zero_drop = df_filled_with_zero.drop(columns=['Renewable-electricity-generating-capacity-per-capita',  'Renewable-electricity-generating-capacity-per-capita'])\n",
+    "\n",
+    "columnsToDrop = ['Renewables (% equivalent primary energy)', 'Entity']\n",
+    "targetColumn = \"Renewables (% equivalent primary energy)\"\n",
+    "\n",
+    "GetRmseFromDF(df_filled_with_zero_drop, \"df_drop_features\", columnsToDrop, targetColumn)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -617,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 325,
    "id": "cfc1868c",
    "metadata": {},
    "outputs": [],
@@ -673,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 326,
    "id": "56871372",
    "metadata": {},
    "outputs": [
@@ -692,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 327,
    "id": "f8dc4254",
    "metadata": {},
    "outputs": [],
@@ -708,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 328,
    "id": "82149bd1",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1260,7 @@
        "[176 rows x 21 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 329,
    "id": "40dd29c7",
    "metadata": {},
    "outputs": [
@@ -2035,7 +2109,7 @@
        "[21 rows x 21 columns]"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 330,
    "id": "22800d4c",
    "metadata": {},
    "outputs": [],
